--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <title>Rishikesh Joshi</title>
     <style>
         body {
@@ -64,23 +65,116 @@
         }
 
         .myFace {
-            animation: fadeInAnimation ease 1.5s; 
-            animation-iteration-count: 1; 
+            animation: fadeInAnimation ease 1.5s;
+            animation-iteration-count: 1;
         }
 
-        @keyframes fadeInAnimation { 
-            0% { 
-                opacity: 0; 
-            } 
-            100% { 
-                opacity: 1; 
-            } 
-        } 
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #eee;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        .loader-wrapper {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #242f3f;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loader {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            position: relative;
+            border: 4px solid #Fff;
+            animation: loader 2s infinite ease;
+        }
+
+        .loader-inner {
+            vertical-align: top;
+            display: inline-block;
+            width: 100%;
+            background-color: #fff;
+            animation: loader-inner 2s infinite ease-in;
+        }
+
+        @keyframes loader {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            25% {
+                transform: rotate(180deg);
+            }
+
+            50% {
+                transform: rotate(180deg);
+            }
+
+            75% {
+                transform: rotate(360deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        @keyframes loader-inner {
+            0% {
+                height: 0%;
+            }
+
+            25% {
+                height: 0%;
+            }
+
+            50% {
+                height: 100%;
+            }
+
+            75% {
+                height: 100%;
+            }
+
+            100% {
+                height: 0%;
+            }
+        }
     </style>
 </head>
 
-
 <body>
+
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
     <header class="text-gray-700 body-font sticky" id="navbar">
 
@@ -158,12 +252,14 @@
     </header>
     <section class="text-gray-700 body-font content">
         <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
-            <img class="myFace lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
+            <img class="myFace lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png"
+                style="border-radius: 20px;">
             <br>
             <div class="container mx-auto flex flex-col justify-center items-center">
                 <a href="#AboutTitle">
-                    <img src="https://img.icons8.com/ios/64/000000/double-down.png" class="animate-bounce w-12 h-12 text-gray-900"/>
-                    
+                    <img src="https://img.icons8.com/ios/64/000000/double-down.png"
+                        class="animate-bounce w-12 h-12 text-gray-900" />
+
                 </a>
             </div>
         </div>
@@ -306,6 +402,9 @@
         </div>
     </footer>
     <script>
+        $(window).on("load",function(){
+          $(".loader-wrapper").fadeOut("slow");
+        });
         window.onscroll = function () { stickyNavbar() };
         var navbar = document.getElementById("navbar");
         var sticky = navbar.offsetTop;
