--- a/website/index.html
+++ b/website/index.html
@@ -54,6 +54,7 @@
 
         html {
             scroll-behavior: smooth;
+            min-height: 100%;
         }
 
         footer {
@@ -81,6 +82,7 @@
 
         body {
             margin: 0;
+            overflow-y:scroll;
             padding: 0;
             width: 100vw;
             height: 100vh;
@@ -165,6 +167,12 @@
 
             100% {
                 height: 0%;
+            }
+        }
+
+        @media(max-width:768px) {
+            .search-bar {
+                display: block !important
             }
         }
     </style>
@@ -402,8 +410,8 @@
         </div>
     </footer>
     <script>
-        $(window).on("load",function(){
-          $(".loader-wrapper").fadeOut("slow");
+        $(window).on("load", function () {
+            $(".loader-wrapper").fadeOut("slow");
         });
         window.onscroll = function () { stickyNavbar() };
         var navbar = document.getElementById("navbar");
