--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #00ffc3);
             background-size: 5000% 5000%;
             background-repeat: no-repeat;
+            overflow-y:scroll;
+            -webkit-overflow-scrolling: touch;
             background-attachment: fixed;
             will-change: transfer;
             animation: changeBackground 10s alternate infinite;
@@ -78,15 +80,6 @@
             100% {
                 opacity: 1;
             }
-        }
-
-        body {
-            margin: 0;
-            overflow-y:scroll;
-            padding: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: #eee;
         }
 
         .content {
