--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
     <title>Rishikesh Joshi</title>
     <style>
         body {
-            width: 100%;
-            min-height: 100vh;
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch;
             background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #00ffc3);
             background-size: 5000% 5000%;
-            background-repeat: no-repeat;
-            overflow-y:scroll;
-            -webkit-overflow-scrolling: touch;
-            background-attachment: fixed;
-            will-change: transfer;
+            
             animation: changeBackground 10s alternate infinite;
         }
 
@@ -55,8 +51,8 @@
         }
 
         html {
-            scroll-behavior: smooth;
             min-height: 100%;
+            scroll-behavior: smooth;
         }
 
         footer {
@@ -65,21 +61,6 @@
 
         .active {
             display: block;
-        }
-
-        .myFace {
-            animation: fadeInAnimation ease 1.5s;
-            animation-iteration-count: 1;
-        }
-
-        @keyframes fadeInAnimation {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
         }
 
         .content {
@@ -160,12 +141,6 @@
 
             100% {
                 height: 0%;
-            }
-        }
-
-        @media(max-width:768px) {
-            .search-bar {
-                display: block !important
             }
         }
     </style>
@@ -253,8 +228,7 @@
     </header>
     <section class="text-gray-700 body-font content">
         <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
-            <img class="myFace lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png"
-                style="border-radius: 20px;">
+            <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
             <br>
             <div class="container mx-auto flex flex-col justify-center items-center">
                 <a href="#AboutTitle">
