--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <title>Rishikesh Joshi</title>
     <style>
+        html {
+            min-height: 100%;
+            scroll-behavior: smooth;
+        }
+
         body {
+            width: 100%;
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch;
             background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #00ffc3);
             background-size: 5000% 5000%;
-            
+            background-attachment: fixed;
             animation: changeBackground 10s alternate infinite;
         }
 
@@ -48,11 +54,6 @@
             100% {
                 background-position: right;
             }
-        }
-
-        html {
-            min-height: 100%;
-            scroll-behavior: smooth;
         }
 
         footer {
