--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
         }
 
         body {
+            min-height: 100%;
             width: 100%;
+            margin: 0;
+            padding: 0;
+            border: 0;
+            outline: 0;
+            overflow-x: auto;
             overflow-y: scroll;
+            background: 0 0;
             -webkit-overflow-scrolling: touch;
             background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #00ffc3);
             background-size: 5000% 5000%;
