--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             padding: 0;
             border: 0;
             outline: 0;
+            will-change: transfer;
             overflow-x: auto;
             overflow-y: scroll;
             background: 0 0;
