--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="apple-touch-icon.png">
+    <link rel="manifest" href="/website/site.webmanifest">
     <title>Rishikesh Joshi</title>
     <style>
         html {
@@ -265,7 +266,8 @@
                 <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
                     <span class="ml-3 text-xl" style="font-size: 40px;"><u>About</u></span>
                     <br><br><br><br>
-                    <p class="leading-relaxed text-lgs">Hi! I am Rishikesh Joshi. I am currently a senior in high school,
+                    <p class="leading-relaxed text-lgs">Hi! I am Rishikesh Joshi. I am currently a senior in high
+                        school,
                         and I love coding. I was first introduced to coding by a contest called Google Code-in which was
                         about
                         contributing to open source organisations and help solve their problems through code. The
@@ -360,6 +362,43 @@
                             </div>
                         </div>
                     </div>
+                    <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                            <img alt="skill"
+                                class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                src="dartLogo.png">
+                            <div class="flex-grow">
+                                <h2 class="text-gray-900 title-font font-medium">Dart</h2>
+                                <p class="text-black-500">I learnt this with the intention to learn flutter... But then I gave up xD. I at least learnt dart ¯\_(ツ)_/¯
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                            <img alt="skill"
+                                class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                src="java.png">
+                            <div class="flex-grow">
+                                <h2 class="text-gray-900 title-font font-medium">Java</h2>
+                                <p class="text-black-500">I learnt java at school. I use it for nothing other than school (I hate java).
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                            <img alt="skill"
+                                class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                src="rubiksCube.png">
+                            <div class="flex-grow">
+                                <h2 class="text-gray-900 title-font font-medium">Speedcuber</h2>
+                                <p class="text-black-500">I started cubing in 4th grade. I attended multiple contest and was the State Champion for 2x2 in the years 2016 and 2017.
+                                    My official best average of 5 solves in 2x2 is 3.60 seconds.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </section>
         <div id="contact"></div>
@@ -373,30 +412,36 @@
                 <div class="flex flex-wrap -m-4 justify-center">
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg border-black-700">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6"
-                                src="githubLogo.png" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a href="https://github.com/Creatune" target="_blank">Visit</a></h3>
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="githubLogo.png"
+                                alt="contact">
+                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
+                                    href="https://github.com/Creatune" target="_blank">Visit</a></h3>
                         </div>
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6"
-                                src="facebookLogo.jpeg" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a href="https://www.facebook.com/profile.php?id=100011425792712" target="_blank">Visit</a></h3>
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="facebookLogo.jpeg"
+                                alt="contact">
+                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
+                                    href="https://www.facebook.com/profile.php?id=100011425792712"
+                                    target="_blank">Visit</a></h3>
                         </div>
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6"
-                                src="instagramLogo.jpeg" alt="contact">
-                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a href="https://www.instagram.com/rjoshi869/?hl=en" target="_blank">Visit</a></h3>
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="instagramLogo.jpeg"
+                                alt="contact">
+                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
+                                    href="https://www.instagram.com/rjoshi869/?hl=en" target="_blank">Visit</a></h3>
                         </div>
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 p-4 w-screen">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6"
-                                src="linkedinLogo.jpeg" alt="contact">
-                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a href="https://www.linkedin.com/in/rishikesh-joshi-46a8961a5/" target="_blank">Visit</a></h3>
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="linkedinLogo.jpeg"
+                                alt="contact">
+                            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
+                                    href="https://www.linkedin.com/in/rishikesh-joshi-46a8961a5/"
+                                    target="_blank">Visit</a></h3>
                         </div>
                     </div>
                 </div>
@@ -405,7 +450,7 @@
         <footer class="text-gray-700 body-font">
             <div>
                 <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                    <p class="text-black-500 text-sm text-center sm:text-left">MIT © 2020 Rishikesh Joshi</p>
+                    <p class="text-black-500 text-sm text-center sm:text-left"><a href="https://github.com/Creatune/rjoshi/blob/master/LICENSE" target="_blank">MIT © 2020 Rishikesh Joshi</a></p>
                     <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
                         <a href="https://icons8.com/icon/37223/double-down">Double Down icon by Icons8</a>
                     </span>
