--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 src="rubiksCube.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Speedcuber</h2>
-                                <p class="text-black-500">I started cubing in 4th grade. I attended multiple contest and was the State Champion for 2x2 in the years 2016 and 2017.
+                                <p class="text-black-500">I started cubing in 4th grade. I attended multiple contests and was the State Champion for 2x2 in the years 2016 and 2017.
                                     My official best average of 5 solves in 2x2 is 3.60 seconds.
                                 </p>
                             </div>
